keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      restartPolicy: Always
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0
          args: ["start-dev"]
          imagePullPolicy: IfNotPresent
          ports:
            - name: keycloak-http
              containerPort: 8080
              # protocol: TCP
            # - name: keycloak-https
            #   containerPort: 8443
            #   protocol: TCP
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          # readinessProbe:
          #   httpGet:
          #     path: /health/ready
          #     port: 8080
          #   initialDelaySeconds: 250
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health/live
          #     port: 8080
          #   initialDelaySeconds: 500
          #   periodSeconds: 30
